// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-bdVaJa dpOaxX sinoui-typography sinoui-typography--body2"
  color="textPrimary"
  type="body2"
>
  Body2
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdVaJa dpOaxX sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </h2>,
  <p
    className="sc-bdVaJa kblpzM sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa hQRiPU sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa jKmPlq sinoui-typography sinoui-typography--body2"
    color="success"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa dpOaxX sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-bdVaJa dpOaxX sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa dtYZjG sinoui-typography sinoui-typography--body2"
    color="primary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa eIlylh sinoui-typography sinoui-typography--body2"
    color="secondary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa dpOaxX sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa gPzVIu sinoui-typography sinoui-typography--body2"
    color="textSecondary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa hkqoEA sinoui-typography sinoui-typography--body2"
    color="error"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa zWkNL sinoui-typography sinoui-typography--body2"
    color="warning"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa jKmPlq sinoui-typography sinoui-typography--body2"
    color="success"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-bdVaJa ddrNDO sinoui-typography sinoui-typography--body2"
    color="info"
    type="body2"
  >
    Body2
  </p>,
]
`;
